Rejoin button alignment issue fixes

--- a/docroot/react/src/views/guest-authentication/guest-authentication.less
+++ b/docroot/react/src/views/guest-authentication/guest-authentication.less
@@ -258,10 +258,12 @@
         flex-direction: column;
         justify-content: space-between;
         height: 100vh;
+        .guest-form-content {
+            .spanish{
+                width: 100% !important;
+            }
+        }
     }
-    // .guest-form-footer {
-    //     position: absolute !important;
-    // }
 }
 
 /* Tablet Styles */
